# codegraph

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.mcp  README.md  docker-compose.yml  prometheus.yml  tarpaulin.toml
.claude/: design-system.md
.cwa/: constitution.md
.cwa/docker/: .env.example  Dockerfile.ona  docker-compose.yml
.cwa/docker/scripts/: ona-healthcheck.sh
.github/workflows/: ci.yml
crates/codegraph-benchmark/: Cargo.toml
crates/codegraph-benchmark/src/: baseline.rs  dataset.rs  error.rs  lib.rs  models.rs  reporter.rs  retriever.rs  runner.rs
crates/codegraph-cli/: Cargo.toml
crates/codegraph-cli/src/: main.rs
crates/codegraph-core/: Cargo.toml
crates/codegraph-core/src/: config.rs  degradation.rs  entities.rs  error.rs  error_tracking.rs  lib.rs  retry.rs  traits.rs
crates/codegraph-extraction/: Cargo.toml
crates/codegraph-extraction/src/: css.rs  design_system.rs  embedding.rs  html.rs  javascript.rs  lib.rs  narsese_gen.rs  ontology.rs  pipeline.rs
crates/codegraph-feedback/: Cargo.toml
crates/codegraph-feedback/src/: confidence.rs  error.rs  lib.rs  metrics.rs  models.rs  prometheus.rs  propagation.rs  repository.rs  reward.rs
crates/codegraph-generation/: Cargo.toml
crates/codegraph-generation/src/: generator.rs  lib.rs  parser.rs  prompt.rs  templates.rs
crates/codegraph-graph/: Cargo.toml
crates/codegraph-graph/src/: entities.rs  lib.rs  relations.rs  repository.rs  schema.rs
crates/codegraph-mcp/: Cargo.toml
crates/codegraph-mcp/src/: lib.rs  protocol.rs  resources.rs  server.rs  tools.rs
crates/codegraph-reasoning/: Cargo.toml
crates/codegraph-reasoning/src/: inference.rs  lib.rs  llm_translator.rs  narsese.rs  ona.rs  ontology.nal  pipeline.rs
crates/codegraph-retrieval/: Cargo.toml
crates/codegraph-retrieval/src/: hybrid.rs  lib.rs  query.rs  ranker.rs
crates/codegraph-vector/: Cargo.toml
crates/codegraph-vector/src/: cache.rs  collections.rs  config.rs  error.rs  lib.rs  models.rs  repository.rs
crates/codegraph-web/: Cargo.toml
crates/codegraph-web/src/: health.rs  lib.rs  middleware.rs  models.rs  prometheus.rs  routes.rs  server.rs  state.rs
crates/codegraph-web/src/handlers/: feedback.rs  generate.rs  graph.rs  metrics.rs  mod.rs  query.rs  snippets.rs  templates.rs
crates/codegraph-web/templates/: base.html  graph.html  metrics.html  query.html  upload.html
crates/codegraph-ws/: Cargo.toml
crates/codegraph-ws/src/: lib.rs  server.rs  state.rs
crates/codegraph-ws/src/handlers/: extract.rs  feedback.rs  generate.rs  graph.rs  metrics.rs  mod.rs  query.rs
crates/codegraph-ws/src/protocol/: messages.rs  mod.rs
crates/codegraph-ws/src/streaming/: mod.rs
docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml  nginx.conf
docker/ona/: Dockerfile
docs/: ona-integration.md
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: types.ts  websocket.ts
frontend/src/api/hooks/: useWebSocket.ts
frontend/src/components/code/: CodeEditor.tsx
frontend/src/components/extraction/: ExtractionStepper.tsx
frontend/src/components/graph/: ElementDetail.tsx  ForceGraph.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/reasoning/: DerivationChain.tsx  NarsPanel.tsx  TruthValue.tsx  index.ts
frontend/src/components/ui/: TagInput.tsx  Toast.tsx
frontend/src/data/: ontology.ts
frontend/src/pages/: Graph.tsx  Help.tsx  Metrics.tsx  Ontology.tsx  Query.tsx  Settings.tsx  Upload.tsx  index.ts
frontend/src/stores/: connection.ts  extraction.ts  generation.ts  metrics.ts  settings.ts  toast.ts
grafana/provisioning/dashboards/: codegraph.json  dashboards.yml
scripts/: dev.sh  start.sh
tests/integration/: Cargo.toml  test_code_generation.rs  test_embedding_qdrant_storage.rs  test_feedback_propagation.rs  test_hybrid_retrieval.rs  test_nars_inference.rs  test_upload_extraction_storage.rs
