[workspace]
members = [
    "crates/codegraph-core",
    "crates/codegraph-extraction",
    "crates/codegraph-graph",
    "crates/codegraph-vector",
    "crates/codegraph-reasoning",
    "crates/codegraph-retrieval",
    "crates/codegraph-feedback",
    "crates/codegraph-generation",
    "crates/codegraph-ws",
    "crates/codegraph-mcp",
    "crates/codegraph-benchmark",
    "crates/codegraph-cli",
    "tests/integration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Charleno Pires"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database clients
neo4rs = "0.8"
qdrant-client = "1.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.27", features = ["tokio-comp"] }

# AST parsing
tree-sitter = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-javascript = "0.23"

# LLM integration
async-openai = "0.28"
reqwest = { version = "0.12", features = ["json"] }

# NARS bridge
subprocess = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
once_cell = "1.20"

# Testing
tokio-test = "0.4"
mockall = "0.13"

# Metrics
prometheus = "0.13"

# OpenAPI
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
