[package]
name = "codegraph-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }
