[package]
name = "codegraph-feedback"
version.workspace = true
edition = "2021"
description = "Feedback collection and learning for RLKGF"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID and time
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"

# Metrics
metrics = "0.24"

# Async trait
async-trait = "0.1"
