[package]
name = "codegraph-mcp"
version.workspace = true
edition = "2021"
description = "MCP server implementation for CodeGraph"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for API calls
reqwest = { workspace = true }

# URL encoding
urlencoding = "2.1"

# UUID for generation IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
