[package]
name = "codegraph-reasoning"
version.workspace = true
edition = "2021"
description = "NARS reasoning integration"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Process management
subprocess = { workspace = true }

# LLM integration
async-openai = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
regex = { workspace = true }
