[package]
name = "codegraph-retrieval"
version.workspace = true
edition = "2021"
description = "GraphRAG retrieval operations"

[dependencies]
# Internal crates
codegraph-reasoning = { path = "../codegraph-reasoning" }
codegraph-vector = { path = "../codegraph-vector" }
codegraph-extraction = { path = "../codegraph-extraction" }
codegraph-graph = { path = "../codegraph-graph" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Database clients
neo4rs = { workspace = true }
qdrant-client = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
uuid = { workspace = true }
regex = { workspace = true }

# Metrics
metrics = "0.24"
