[package]
name = "codegraph-vector"
version.workspace = true
edition = "2021"
description = "Qdrant vector operations for UI component embeddings"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Qdrant client
qdrant-client = "1.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"

# Redis for caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Metrics
metrics = "0.24"
