[package]
name = "codegraph-web"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "CodeGraph Web API - Axum HTTP server"

[dependencies]
# Internal crates
codegraph-extraction = { path = "../codegraph-extraction" }
codegraph-graph = { path = "../codegraph-graph" }
codegraph-reasoning = { path = "../codegraph-reasoning" }
codegraph-retrieval = { path = "../codegraph-retrieval" }
codegraph-generation = { path = "../codegraph-generation" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database clients
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }

# Metrics
prometheus = { workspace = true }

# OpenAPI
utoipa = { workspace = true, features = ["uuid", "chrono"] }
utoipa-swagger-ui = { workspace = true }
